homework-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-homework
  labels:
    app: otus-homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-homework
  template:
    metadata:
      name: otus-homework
      labels:
        app: otus-homework
    spec:
      containers:
        - name: otus-homework
          image: onbehalfofme/homework
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
