homework-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-homework
spec:
  selector:
    app: otus-homework
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
