homework-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /otusapp/danila(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-homework
                port:
                  number: 8000
